# multi-ai-code-cli

./: .gitignore  CLAUDE_template.md  LICENSE  README.md  agents.md  app.py  app_status.sh  claude.md  claude_dev.md  pyproject.toml
.claude/commands/: cli.md  custom.md  docs.md
docs/: claude-code-reference.md  claude-code-urls.md  codex-reference.md  codex-urls.md  design.md  gemini-cli-reference.md  gemini-cli-urls.md  product.md  spec.md  todos.md  typer-reference.md  typer-urls.md
scripts/: setup.sh  setup_utils.sh  test.sh
src/cli/: cli.py
src/cli/commands/: add.py  clean.py  goodbye.py  hello.py  init.py  list_providers.py
src/core/: detector.py  generator.py
src/providers/: base.py  claude.py  codex.py  gemini.py
tests/: conftest.py  test_add.py  test_clean.py  test_goodbye.py  test_hello.py  test_init.py  test_list_providers.py  test_migration.py  test_providers.py
